remove redundant elements and bootstrap classes, add link to RPS game on the main button, reformat folders

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <!-- External Stylesheet -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Challenge Ch3 Avinska</title>
 </head>
 
@@ -61,17 +60,18 @@
         <div class="mainpage-judul">
           <h1>PLAY TRADITIONAL GAME</h1>
           <h3 class="subtitle pb-sm-4 pt-sm-4 pb-md-5 pt-md-5">Experience new traditional game play</h3>
-          <button type="button" class="btn btn-warning big-yellowy-button">PLAY NOW</button>
+          <a href="suit.html">
+            <button type="button" class="btn btn-warning big-yellowy-button">PLAY NOW</button>
+          </a>
         </div>
         <div class="justify-content-center align-items-center">
           <a href="#about" class="link-text">
             <p class="mb-2">THE STORY</p>
-            <img src="assets/scroll-down.svg" alt="" height="">
+            <img src="assets/mainpage/bg-img/scroll-down.svg">
           </a>
         </div>
       </div>
     </section>
-    <section class=""></section>
     <!-- About Page -->
     <!-- Carousel -->
     <section id="about" class="bg-style">
@@ -96,34 +96,33 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <a class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
               data-bs-slide="prev">
-              <img src="assets/carousel/switch-right.svg" alt="">
+              <img src="assets/mainpage/carousel/switch-right.svg" alt="">
               <span class="visually-hidden">Previous</span>
             </a>
             <a class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
               data-bs-slide="next">
-              <img src="assets/carousel/switch-left.svg" alt="">
+              <img src="assets/mainpage/carousel/switch-left.svg" alt="">
               <span class="visually-hidden">Next</span>
             </a>
           </div>
         </div>
-        <!-- </div> -->
       </div>
     </section>
 
@@ -233,49 +232,49 @@
           </div>
         </div>
         <div class="col-lg-6 cards-container">
-          <div class="card offset-sm-2 mb-3" style="width: 25rem;">
+          <div class="card offset-sm-2 offset-md-3 offset-lg-5 mb-3" style="width: 25rem;">
             <div class="card-body">
               <div class="card-avatar card-item">
-                <img src="assets/card/lathi.png" class="rounded-circle" alt="a reviewer profile picture">
+                <img src="assets/mainpage/card/lathi.png" class="rounded-circle" alt="a reviewer profile picture">
               </div>
               <div class="card-profile card-item">
                 <h5 class="title">Evan Lahti</h5>
                 <span class="context">PC Gamer</span>
               </div>
               <div class="card-item">
-                <img src="assets/card/twitter.svg">
+                <img src="assets/mainpage/card/twitter.svg">
               </div>
               <p class="card-text context">"One of my gaming highlights of the year."</p>
               <span class="card-date mini-text">June 18, 2021</span>
             </div>
           </div>
-          <div class="card offset-sm-2 mb-3" style="width: 25rem;">
+          <div class="card offset-sm-2 offset-md-3 mb-3" style="width: 25rem;">
             <div class="card-body">
               <div class="card-avatar card-item">
-                <img src="assets/card/griffin.png" class="rounded-circle" alt="a reviewer profile picture">
+                <img src="assets/mainpage/card/griffin.png" class="rounded-circle" alt="a reviewer profile picture">
               </div>
               <div class="card-profile card-item">
                 <h5 class="title">Jada Griffin</h5>
                 <span class="context">Nerdreactor</span>
               </div>
               <div class="card-item">
-                <img src="assets/card/twitter.svg">
+                <img src="assets/mainpage/card/twitter.svg">
               </div>
               <p class="card-text context">"The next big thing in the world of streaming and survival games."</p>
               <span class="card-date mini-text">July 10, 2021</span>
             </div>
           </div>
-          <div class="card offset-sm-2" style="width: 25rem;">
+          <div class="card offset-sm-2 offset-md-3 offset-lg-4" style="width: 25rem;">
             <div class="card-body">
               <div class="card-avatar card-item">
-                <img src="assets/card/williams.png" class="rounded-circle" alt="a reviewer profile picture">
+                <img src="assets/mainpage/card/williams.png" class="rounded-circle" alt="a reviewer profile picture">
               </div>
               <div class="card-profile card-item">
                 <h5 class="title">Aaron Williams</h5>
                 <span class="context">Uproxx</span>
               </div>
               <div class="card-item">
-                <img src="assets/card/twitter.svg">
+                <img src="assets/mainpage/card/twitter.svg">
               </div>
               <p class="card-text context">"Snoop Dogg Playing The Wildly Entertaining 'SOS' is Ridiculous."</p>
               <span class="card-date mini-text">December 24, 2018</span>
@@ -332,11 +331,14 @@
           <a class="nav-link p-2 link-text" href="#system-requirements">system requirements</a>
         </li>
         <li class="nav justify-content-center">
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/twitter-full.svg"
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/twitter-full.svg"
               alt=""></a>
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/facebook.svg" alt=""></a>
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/Vector.svg" alt=""></a>
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/twitch.svg" alt=""></a>
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/facebook.svg"
+              alt=""></a>
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/Vector.svg"
+              alt=""></a>
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/twitch.svg"
+              alt=""></a>
         </li>
       </ul>
 
